<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="SPOTIFY_STREAMER">SPOTIFY STREAMER</string>
    <string name="SCORES_APP">SCORES APP</string>
    <string name="LIBRARY_APP">LIBRARY APP</string>
    <string name="BUILD_IT_BIGGER">BUILD IT BIGGER</string>
    <string name="XYZ">XYZ READER</string>
    <string name="CAPSTONE">CAPSTONE: MY OWN APP</string>
    <string name="MY_Nanodegree_Apps">My Nanodegree Apps!</string>
    <string name="CONTENT_DESCRIPTION">This button will launch my Capstone App</string>
    <string name="CONTENT_DESCRITION">This button will launch my Capstone App</string>
    <string name="edit_message">This button will launch my capstone app!</string>
</resources>
